Refer to ChangeLog for detailed per-file info.

caspar version 20140201 - The Matonge Release

- UNRELEASED
[ Joost van Baal-Ilić ]
- FIXME
- FIX autofoo dnbfs bug

- bootstrap:
+#AUTOMAKE=automake-1.14 ACLOCAL=aclocal-1.14 autoreconf --install --symlink
+AUTOMAKE=automake-1.11 ACLOCAL=aclocal-1.11 autoreconf --install --symlink

autom4te: cannot create autom4te.cache: Nema takve datoteke ili direktorija


caspar version 20140106 - The Bakertand Release

[ Joost van Baal-Ilić ]
- script/csp_sucp: bugfix: feed not just $3, but also any more args
  as files to tar. Now passing more than just one file to csp_sucp actually
  works.
- bootstrap: update from automake/aclocal 1.11 to 1.14 (only relevant
  for developers building caspar from within a git checkout).
- Makefile.am: no longer ship caspar-<version>.tar.bz2, do ship caspar-<version>.tar.xz.


caspar version 20131119 - The Sint Agatha Release

[ Joost van Baal-Ilić ]
- doc/csp_helper.azm, script/csp_sucp: Fixes in csp_sucp(1):
  + update csp_sucp description: since version 20120514 we use tar, not cat.
    document how to use csp_sucp with interactive sudo password prompt.
  + we no longer suffer from password-prompt bug: run sudo non-interactive
    (-n) when stdin is filled with tar data ; explicitly get rid of tty when
    stdin is filled with tar in order to make sure this data will not get
    interpreted as password for sudo; pass -t to ssh, not -T, when refreshing
    sudo password, gets rid of error message "sudo: no tty present and no
    askpass program specified ".
  + explicitly pass c to tar. (GNU tar) 1.26 needs at least one option.
- mk/caspar.mk: Swap dealing with $(csp_TABOOFILES) and $(csp_BUILD) in
  contructing FILES to be install-ed.  Now $(csp_TABOOFILES) is subtracted
  from $(csp_BUILD) (was: $(csp_BUILD) gets added to result of subtracting
  $(csp_TABOOFILES) from list of FILES.  So, now "csp_BUILD = check" and
  "csp_TABOOFILES_ADD = check" no longer results in caspar trying to install