@@ -13,9 +13,9 @@ ChangeLog: NEWS
 #	# git log --pretty --numstat --summary | sed 's/<joostvb[^>][^>]*>//g; s/<wsl[^>][^>]*>//g' | git2cl >ChangeLog
 
 VERSION.m4 VERSION stamp.year stamp.month stamp.day: ChangeLog
-	./setversion
+	$(top_srcdir)/setversion
 
-CONFIGURE_DEPENDENCIES = VERSION.m4
+## CONFIGURE_DEPENDENCIES = VERSION.m4
 
 ## Hook `dist-bzip2' to `dist'.
 AUTOMAKE_OPTIONS = dist-xz check-news
@@ -43,4 +43,5 @@ publish:
 ## Only files from the current directory or from subdirectory which
 ## don't have their own Makefile.am should be listed here.
 EXTRA_DIST = bootstrap setversion VERSION.m4 VERSION
+DISTCLEANFILES = VERSION.m4 VERSION stamp.day stamp.month stamp.year
 
